--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="bg-white text-neutral-900 dark:bg-neutral-900 dark:text-neutral-50"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
